fix uni burger z-index revert

--- a/fishkey.css
+++ b/fishkey.css
@@ -37,7 +37,7 @@
     height: 100vh;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 999;
     pointer-events: none;
 }
 .triggerBlock a {
